[tool.poetry]
name = "deepdemuffler"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
mpire = "^2.6.0"
numpy = "1.19.5"
scipy = "^1.9.3"
tensorflow = "2.6.0"
keras = "2.6.0"
h5py = "3.1.0"
matplotlib = "^3.6.2"
librosa = "^0.9.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
