[tool.mypy]
strict = true

[tool.poetry]
name = "deepdemuffler"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^1.7.0"
ruff = "^0.1.6"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pydub = "^0.25.1"
pydub-stubs = "^0.25.1.1"
tqdm = "^4.66.1"
types-tqdm = "^4.66.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
